--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 data/processed/ filter=lfs diff=lfs merge=lfs -text
+data/processed/arxiv-abstracts-cleaned_v1.parquet filter=lfs diff=lfs merge=lfs -text
